--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 html, body {
     font-family: sans-serif;
-    margin: 50;
+    margin: 75;
     width: 100%;
     height: 100%;
 }
@@ -23,4 +23,22 @@ h3 {
 p {
     max-width: 65%;
     color:black;
+    text-align: justify;
+}
+
+#videoprese {
+
+  left: 50%;
+}
+
+.logo {
+  background-color: transparent;
+}
+
+.nome {
+  background-color: transparent;
+}
+.titolo {
+  display: flex;
+  margin-left: 300;
 }
