--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 html, body {
-    font-family: sans-serif;
-    margin: 75;
+    font-family: Helvetica, sans-serif;
+    margin: 75px;
+
     width: 100%;
     height: 100%;
 }
@@ -26,11 +27,6 @@ p {
     text-align: justify;
 }
 
-#videoprese {
-
-  left: 50%;
-}
-
 .logo {
   background-color: transparent;
 }
@@ -40,5 +36,9 @@ p {
 }
 .titolo {
   display: flex;
-  margin-left: 500;
+  flex-wrap: nowrap;
+}
+
+.video {
+  background-color: #cfcfcf;
 }
