--- a/main.css
+++ b/main.css
@@ -1,9 +1,7 @@
 html, body {
     font-family: Helvetica, sans-serif;
-    margin: 50px;
+    margin: 0;
 
-    width: 100%;
-    height: 100%;
 }
 
 h1 {
@@ -27,27 +25,41 @@ p {
     text-align: justify;
 }
 
-.logo {
-  background-color: transparent;
+.container {
+  margin: 50px;
 }
 
-.nome {
-  background-color: transparent;
-}
 .banner {
+  position: relative;
   display: flex;
   flex-wrap: nowrap;
+  justify-content:center;
+
 }
+
 .banner2 {
+  position: relative;
   display: flex;
   flex-wrap: nowrap;
-  background-color: #cfcfcf;
+  background-image: url(http://goo.gl/p6xmhr);
+  background-size: cover;
+
+}
+
+.video {
+  position: relative;
+  margin: 20px;
+}
+
+.quote {
+  position: relative;
+  justify-content: flex-end;
+  text-align: center;
   font-size: 2.5rem;
   color: white;
+  margin:30px;
 }
-.quote {
-  text-align: center;
-}
+
 .banner3 {
   display: flex;
   flex-wrap: nowrap;
