--- a/main.css
+++ b/main.css
@@ -52,12 +52,15 @@ p {
 }
 
 .quote {
-  position: relative;
+  float: right;
+  /*position: relative;
   justify-content: flex-end;
-  text-align: center;
+  text-align: center;*/
   font-size: 2.5rem;
   color: white;
-  margin:30px;
+  margin: 20px 30px;
+  border: 10px solid black;
+  padding: 50px;
 }
 
 .banner3 {
@@ -65,4 +68,27 @@ p {
   flex-wrap: nowrap;
   font-size: 1.25rem;
   color: black;
+}
+
+.bio {
+  border: 10px solid red;
+  padding: 30px;
+}
+
+.navbar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.navbar li{
+  display: inline;
+}
+
+.logo {
+  float: left;
+}
+
+#contatti {
+  float: right;
 }
